[NRRPLT-4147] prevent simulation load flickering + css refactoring

--- a/app/styles/esv/environment-settings-panel.scss
+++ b/app/styles/esv/environment-settings-panel.scss
@@ -18,7 +18,7 @@ $environmentSettingsPanelHeadingHeightTotal: $environmentSettingsPanelHeadingHei
    }
 
   @extend .pop-over-viewer;
-   display: flex !important;
+   display: flex;
    top: 3%;
    left: 3%;
    width: $environmentSettingsPanelStartWidth;
