--- a/app/styles/esv/gz3d-view.scss
+++ b/app/styles/esv/gz3d-view.scss
@@ -1,41 +1,24 @@
 /* Experiment Simulation Viewer */
-/* Flexbox Layout to cover the complete browser window */
-html {
-  height: 100%;
-}
+
 
 /* http://stackoverflow.com/questions/26895349/how-can-i-get-ff-33-x-flexbox-behavior-in-ff-34-x */
 * { min-height:0 }
 * { min-width:0 }
 
-body {
-  display: flex;
-  flex-direction: column;
+.gz3d-body{
+  height:100%;
+  width:100%;
+  display:block !important;
+}
+.gz3d-container {
   width: 100%;
-  min-width: 100%;
   height: 100%;
-  min-height: 100%;
 }
-
-body > div {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  width: 100%;
-  min-width: 100%;
+.gz3d-webgl{
+  height:calc(100% - 42px);//height of toolbar
+  width:100%;
+  position:relative;
 }
-
-.esv-flex-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  min-width: 100%;
-}
-
-.esv-flex-greedy-element {
-  flex: 1;
-}
-
 .keyboard-control-info {
   position: absolute;
   top: 100px;
