--- a/app/styles/esv/ros-reconnecting.scss
+++ b/app/styles/esv/ros-reconnecting.scss
@@ -2,7 +2,7 @@
     display:none;
     top:0;
     left:0;
-    position:fixed;
+    position:absolute;
     height:100%;
     width:100%;
     z-index:2000;
