--- a/app/styles/miniBrowserDialog.css
+++ b/app/styles/miniBrowserDialog.css
@@ -1,2 +1,1 @@
-html, body { height: 100%; margin: 0; }
 .bbp-mini-browser { max-height: 100%; height: 100%; }
